--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Anular.cshtml
@@ -38,16 +38,16 @@
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="pe_mes">Mes</label>
-                    @Html.DropDownListFor(q => q.pe_mes, new SelectList(ViewBag.lst_Mes, "idMes", "smes"), new { @class = "form-control", @id = "smes", @disabled = true })
-                    @Html.ValidationMessageFor(q => q.pe_mes, "", new { @class = "text-danger" })
+                    <label for="IdanioFiscal">Año fiscal</label>
+                    @Html.DropDownListFor(q => q.IdanioFiscal, new SelectList(ViewBag.lst_anio_fiscal, "IdanioFiscal", "IdanioFiscal"), new { @class = "form-control", @id = "IdanioFiscal" })
+                    @Html.ValidationMessageFor(q => q.IdanioFiscal, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="IdanioFiscal">Año fiscal</label>
-                    @Html.DropDownListFor(q => q.IdanioFiscal, new SelectList(ViewBag.lst_anio_fiscal, "IdanioFiscal", "IdanioFiscal"), new { @class = "form-control", @id = "IdanioFiscal", @disabled = true })
-                    @Html.ValidationMessageFor(q => q.IdanioFiscal, "", new { @class = "text-danger" })
+                    <label for="pe_mes">Mes</label>
+                    @Html.DropDownListFor(q => q.pe_mes, new SelectList(ViewBag.lst_Mes, "idMes", "smes"), new { @class = "form-control", @id = "pe_mes" })
+                    @Html.ValidationMessageFor(q => q.pe_mes, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
