--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CierreAnual/_GridViewPartial_CierreAnual.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CierreAnual/_GridViewPartial_CierreAnual.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridViewPartial_CierreAnual";
-        settings.CallbackRouteValues = new { Controller = "CierreAnual", Action = "GridViewPartial_CierreAnual", IdEmpresa = ViewBag.IdEmpresa, IdSucursal = ViewBag.IdSucursal };
+        settings.CallbackRouteValues = new { Controller = "CierreAnual", Action = "GridViewPartial_CierreAnual", Nuevo = ViewBag.Nuevo };
         settings.KeyFieldName = "IdCbteCble";
         settings.Width = Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
@@ -53,16 +53,22 @@
             c.SetDataItemTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdanioFiscal = DataBinder.Eval(tc.DataItem, "IdanioFiscal") }) + "&nbsp;" +
-                    Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa") , IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdanioFiscal = DataBinder.Eval(tc.DataItem, "IdanioFiscal") },
-                        new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
+                    Html.ActionLink("Consultar", "Consultar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdanioFiscal = DataBinder.Eval(tc.DataItem, "IdanioFiscal") })
                 );
+                //ViewContext.Writer.Write(
+                //    Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdanioFiscal = DataBinder.Eval(tc.DataItem, "IdanioFiscal") }) + "&nbsp;" +
+                //    Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa") , IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdanioFiscal = DataBinder.Eval(tc.DataItem, "IdanioFiscal") },
+                //        new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
+                //);
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo",new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
-                );
+                if (ViewBag.Nuevo==true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -80,6 +86,7 @@
             });
             column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
