--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CierreAnual/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CierreAnual/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Contabilidad.ct_anio_fiscal_x_tb_sucursal_Info
 @{
-    ViewBag.Title = "Modificar cierre anual";
+    ViewBag.Title = "Consultar cierre anual";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -9,7 +9,7 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@using (Html.BeginForm("Modificar", "CierreAnual", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "CierreAnual", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     if (ViewBag.mensaje != null)
     {
@@ -34,6 +34,41 @@
     @Html.HiddenFor(q => q.IdTipoCbte, new { @id = "IdTipoCbte" })
     @Html.HiddenFor(q => q.IdCbteCble, new { @id = "IdCbteCble" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-9 col-md-1">
+                @if (@ViewBag.Nuevo == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "CierreAnual", new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa }, null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Modificar == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "CierreAnual", new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdanioFiscal = Model.IdanioFiscal }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Anular == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "CierreAnual", new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal,IdanioFiscal = Model.IdanioFiscal }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-4">
@@ -76,7 +111,6 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index", "CierreAnual", new { Area = "Contabilidad" },null)">Cancelar</a>
     </div>
     @section Scripts {
