--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CierreAnual/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CierreAnual/Nuevo.cshtml
@@ -75,7 +75,7 @@
     </div>
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "ComprobanteContable", new { IdTipoCbte = Model.IdTipoCbte, Area = "Contabilidad" }, null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index", "CierreAnual", new { Area = "Contabilidad" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
