--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CierrePorModuloPorSucursal/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CierrePorModuloPorSucursal/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Contabilidad.ct_CierrePorModuloPorSucursal_Info
 @{
-    ViewBag.Title = "Modificar cierre de módulo por sucursal";
+    ViewBag.Title = "Consultar cierre de módulo por sucursal";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -8,7 +8,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Modificar", "CierrePorModuloPorSucursal", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "CierrePorModuloPorSucursal", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     if (ViewBag.mensaje != null)
     {
@@ -30,6 +30,41 @@
 
     @Html.HiddenFor(q => q.IdEmpresa);
     @Html.HiddenFor(q => q.IdCierre);
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-9 col-md-1">
+                @if (@ViewBag.Nuevo == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","ComprobanteContable",new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa },null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Modificar == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "ComprobanteContable", new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa, IdTipoCbte = Model.IdTipoCbte, IdCbteCble = Model.IdCbteCble }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Anular == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "ComprobanteContable", new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa, IdTipoCbte = Model.IdTipoCbte, IdCbteCble = Model.IdCbteCble }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -93,7 +128,6 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index", "CierrePorModuloPorSucursal", new { Area ="Contabilidad" }, null)">Cancelar</a>
     </div>
 
