--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/RevisionContable/_GridViewPartial_Facturacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/RevisionContable/_GridViewPartial_Facturacion.cshtml
@@ -78,6 +78,7 @@
                 }).Render();
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
