--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ParametroBanco/_GridViewPartial_CbteBan_x_CbteCble.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ParametroBanco/_GridViewPartial_CbteBan_x_CbteCble.cshtml
@@ -104,6 +104,7 @@
                 p.DataSource = ViewBag.lst_DebCre;
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 
 }
