--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Banco.ba_Talonario_cheques_x_banco_Info
 @{
     ViewBag.Title = "Consulta de talonario bancario";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,7 +10,9 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_talonario_cheque")
+    @Html.Action("GridViewPartial_talonario_cheque", new { Nuevo = ViewBag.Nuevo })
 
 }
