--- a/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Core.Erp.Web.Helps
+﻿@model Core.Erp.Info.Banco.ba_Banco_Cuenta_Info
+@using Core.Erp.Web.Helps
 @{
     ViewBag.Title = "Consulta de cuentas bancarias";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,12 +11,14 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
     <div class="row">
         <div class="col-md-12">
             <a class="btn btn-primary" href="@Url.Action("Importar","BancoCuenta",new { Area = "Banco", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
         </div>
     </div>
-    @Html.Action("GridViewPartial_cuentas")
+    @Html.Action("GridViewPartial_cuentas", new { Nuevo = ViewBag.Nuevo })
 
 }
