--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoBanco/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoBanco/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Banco.ba_TipoFlujo_Info
 @{
     ViewBag.Title = "Consulta de tipo de flujo bancario";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,8 +10,10 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_tipo_flujo")
+    @Html.Action("GridViewPartial_tipo_flujo", new { Nuevo=ViewBag.Nuevo })
 
 
 }
