--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TipoNotaBanco/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TipoNotaBanco/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Banco.ba_tipo_nota_Info
 @{
     ViewBag.Title = "Consulta de motivos de tipo de nota";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,5 +10,8 @@
 
 @using (Html.BeginForm())
 {
-    @Html.Action("GridViewPartial_tipo_nota")
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
+    @Html.Action("GridViewPartial_tipo_nota", new { Nuevo=ViewBag.Nuevo})
 }
