--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/AnioFiscal/_GridViewPartial_anio_fiscal.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/AnioFiscal/_GridViewPartial_anio_fiscal.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_anio_fiscal";
-        settings.CallbackRouteValues = new { Controller = "AnioFiscal", Action = "GridViewPartial_anio_fiscal" };
+        settings.CallbackRouteValues = new { Controller = "AnioFiscal", Action = "GridViewPartial_anio_fiscal", Nuevo = ViewBag.Nuevo };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdanioFiscal";
 
@@ -61,20 +61,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "af_estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdanioFiscal = DataBinder.Eval(tc.DataItem, "IdanioFiscal") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdanioFiscal = DataBinder.Eval(tc.DataItem, "IdanioFiscal") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdanioFiscal = DataBinder.Eval(tc.DataItem, "IdanioFiscal") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -94,7 +92,7 @@
             column.Caption = "Fecha fin";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
             column.Width = Unit.Percentage(40);
-        }); 
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "EstadoBool";
@@ -105,7 +103,7 @@
 
             });
         });
-
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
