--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlantillaComprobanteContable/_GridViewPartial_ComprobanteContablePlantilla.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlantillaComprobanteContable/_GridViewPartial_ComprobanteContablePlantilla.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridViewPartial_ComprobanteContablePlantilla";
-        settings.CallbackRouteValues = new { Controller = "PlantillaComprobanteContable", Action = "GridViewPartial_ComprobanteContablePlantilla" };
+        settings.CallbackRouteValues = new { Controller = "PlantillaComprobanteContable", Action = "GridViewPartial_ComprobanteContablePlantilla", Nuevo=ViewBag.Nuevo };
         settings.KeyFieldName = "IdPlantilla";
         settings.Width = Unit.Percentage(100);
 
@@ -63,20 +63,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "cb_Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdPlantilla = DataBinder.Eval(tc.DataItem, "IdPlantilla") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdPlantilla = DataBinder.Eval(tc.DataItem, "IdPlantilla") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdPlantilla = DataBinder.Eval(tc.DataItem, "IdPlantilla") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
-                );
+                if (ViewBag.Nuevo==true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -96,6 +94,7 @@
 
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
