--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CentroCosto/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CentroCosto/Anular.cshtml
@@ -68,7 +68,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
-                <div class="form-group">
+                <div class="form-group has-error">
                     <label for="MotivoAnulacion">Motivo Anulacion</label>
                     @Html.TextAreaFor(q => q.MotivoAnulacion, new { @class = "form-control", @id = "MotivoAnulacion", @rows = 1 })
                     @Html.ValidationMessageFor(q => q.MotivoAnulacion, "", new { @class = "text-danger" })
