--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CentroCosto/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CentroCosto/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using Core.Erp.Web.Helps
+﻿@model Core.Erp.Info.Contabilidad.ct_CentroCosto_Info
 @{
     ViewBag.Title = "Consulta de centros de costo";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,5 +10,8 @@
 
 @using (Html.BeginForm())
 {
-    @Html.Action("GridViewPartial_centrocosto")
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
+    @Html.Action("GridViewPartial_centrocosto", new { Nuevo = ViewBag.Nuevo })
 }
