--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlantillaComprobanteContable/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlantillaComprobanteContable/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model Core.Erp.Info.Contabilidad.ct_cbtecble_Plantilla_Info
+@{
     ViewBag.Title = "Consultar plantillas de comprobante contable";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
@@ -9,6 +10,9 @@
 
 @using (Html.BeginForm())
 {
-    @Html.Action("GridViewPartial_ComprobanteContablePlantilla");
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
+    @Html.Action("GridViewPartial_ComprobanteContablePlantilla", new { Nuevo=ViewBag.Nuevo} );
 
 }
