--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PuntoCargo/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PuntoCargo/Anular.cshtml
@@ -61,7 +61,17 @@
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group has-error">
+                    <label for="nom_punto_cargo_grupo">Motivo de anulación*</label>
+                    @Html.TextBoxFor(q => q.MotivoAnulacion, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.MotivoAnulacion, "", new { @class = "form", @role = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="box-footer">
         <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index","PuntoCargoGrupo", new { IdPunto_cargo_grupo = Model.IdPunto_cargo_grupo, Area = "Contabilidad" },null)">Cancelar</a>
