--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PuntoCargo/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PuntoCargo/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Contabilidad.ct_punto_cargo_Info
 @{
-    ViewBag.Title = "Nuevo punto de cargo";
+    ViewBag.Title = "Consultar punto de cargo";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -9,10 +9,54 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@using (Html.BeginForm("Nuevo", "PuntoCargo", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "PuntoCargo", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
     @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdPunto_cargo_grupo)
     @Html.HiddenFor(q => q.IdPunto_cargo)
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-9 col-md-1">
+                @if (@ViewBag.Nuevo == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "PuntoCargo", new { Area = "Contabilidad", IdPunto_cargo_grupo = Model.IdPunto_cargo_grupo }, null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Modificar == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "PuntoCargo", new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa, IdPunto_cargo_grupo = Model.IdPunto_cargo_grupo, IdPunto_cargo = Model.IdPunto_cargo }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Anular == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "PuntoCargo", new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa, IdPunto_cargo_grupo = Model.IdPunto_cargo_grupo, IdPunto_cargo = Model.IdPunto_cargo }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -62,7 +106,6 @@
     </div>
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index","PuntoCargoGrupo", new { IdPunto_cargo_grupo = Model.IdPunto_cargo_grupo, Area = "Contabilidad" },null)">Cancelar</a>
     </div>
     @section Scripts {
