--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PuntoCargo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PuntoCargo/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Contabilidad.ct_punto_cargo_Info
 @{
     ViewBag.Title = "Consulta de puntos de cargo";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,9 +10,12 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdPunto_cargo_grupo, new { @id = "IdPunto_cargo_grupo" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_punto_cargo", new { IdPunto_cargo_grupo = ViewBag.IdPunto_cargo_grupo })
+    @Html.Action("GridViewPartial_punto_cargo", new { Nuevo = ViewBag.Nuevo, IdPunto_cargo_grupo = ViewBag.IdPunto_cargo_grupo })
     <div class="box-footer">
-        <a class="btn btn-default" href="@Url.Action("Index","PuntoCargoGrupo",new { IdPunto_cargo_grupo = ViewBag.IdPunto_cargo_grupo, Area = "Contabilidad" },null)">Volver</a>
+        <a class="btn btn-default" href="@Url.Action("Index","PuntoCargoGrupo",new { Area = "Contabilidad" },null)">Volver</a>
     </div>
 }
