--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PuntoCargoGrupo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PuntoCargoGrupo/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Contabilidad.ct_punto_cargo_grupo_Info
 @{
     ViewBag.Title = "Consulta de grupos de punto de cargo";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,7 +10,9 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_punto_cargo_grupo")
+    @Html.Action("GridViewPartial_punto_cargo_grupo", new { Nuevo = ViewBag.Nuevo })
 
 }
